[gd_scene load_steps=6 format=3 uid="uid://dshkqmfxg6fp0"]

[ext_resource type="Script" path="res://player.gd" id="1_01ees"]
[ext_resource type="Script" path="res://Reticle.gd" id="2_gbbim"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ya2sn"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_07j4x"]

[sub_resource type="LabelSettings" id="LabelSettings_p857p"]
font_size = 80

[node name="Player" type="CharacterBody3D"]
axis_lock_angular_x = true
axis_lock_angular_z = true
script = ExtResource("1_01ees")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_ya2sn")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_07j4x")

[node name="CameraOrigin" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.96036, 0)

[node name="SpringArm3D" type="SpringArm3D" parent="CameraOrigin"]
spring_length = 5.0
margin = 2.5

[node name="Camera3D" type="Camera3D" parent="CameraOrigin/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.01852)

[node name="BulletOrigin" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.66165, -0.664116)

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Reticle" type="CenterContainer" parent="UserInterface"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_gbbim")

[node name="Top" type="Line2D" parent="UserInterface/Reticle"]
position = Vector2(20, 20)
points = PackedVector2Array(0, -5, 0, -15)
width = 2.0

[node name="Right" type="Line2D" parent="UserInterface/Reticle"]
position = Vector2(20, 20)
points = PackedVector2Array(5, 0, 15, 0)
width = 2.0

[node name="Bottom" type="Line2D" parent="UserInterface/Reticle"]
position = Vector2(20, 20)
points = PackedVector2Array(0, 5, 0, 15)
width = 2.0

[node name="Left" type="Line2D" parent="UserInterface/Reticle"]
position = Vector2(20, 20)
points = PackedVector2Array(-5, 0, -15, 0)
width = 2.0

[node name="Label" type="Label" parent="UserInterface"]
visible = false
layout_mode = 0
offset_left = 17.0
offset_right = 67.0
offset_bottom = 110.0
text = "0"
label_settings = SubResource("LabelSettings_p857p")
